--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="./output.css" />
+        <link rel="stylesheet" href="./src/output.css" />
     </head>
     <body>
         <header>
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Les formations</a>
+                        <a href="#" class="no-underline">Les formations</a>
                     </li>
                     <li>
                         <form action="#" method="GET">
@@ -54,7 +54,9 @@
         </header>
         <main>
             <div>
-                <h1>Klivio, l’allié de votre progression</h1>
+                <h1 class="font-medium text-gray-500">
+                    Klivio, l’allié de votre progression
+                </h1>
                 <h2>
                     Les meilleures formations sur le développement personnel
                 </h2>
