--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         class="flex flex-wrap justify-evenly items-stretch gap-6"
                     >
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -231,7 +231,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hove r:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -285,7 +285,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -354,7 +354,7 @@
                         class="flex flex-wrap justify-evenly items-stretch gap-6"
                     >
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -409,7 +409,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -464,7 +464,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -519,7 +519,7 @@
                             </div>
                         </div>
                         <div
-                            class="group w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
+                            class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
                                 src="/assets/images/img-course.png"
@@ -580,7 +580,7 @@
                     </button>
                 </div>
             </div>
-            <section class="space-y-4">
+            <div class="space-y-4">
                 <h2 class="text-xl font-semibold">Avis Clients</h2>
                 <div class="grid gap-6 md:grid-cols-2">
                     <div
@@ -669,8 +669,8 @@
                         </p>
                     </div>
                 </div>
-            </section>
-            <section
+            </div>
+            <div
                 class="rounded-2xl bg-white/10 border border-white/10 p-6 md:p-8"
             >
                 <div class="grid gap-8 lg:grid-cols-2 items-center">
@@ -756,8 +756,8 @@
                         class="w-full rounded-2xl object-cover"
                     />
                 </div>
-            </section>
-            <section
+            </div>
+            <div
                 class="rounded-2xl bg-white/10 border border-white/10 p-6 md:p-8"
             >
                 <div class="grid gap-8 lg:grid-cols-2 items-center">
@@ -839,8 +839,8 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="space-y-4">
+            </div>
+            <div class="space-y-4">
                 <h2 class="text-xl font-bold">À propos de Klivio</h2>
                 <div class="rounded-2xl bg-white/10 border border-white/10 p-6">
                     <div>
@@ -866,7 +866,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </div>
             <div class="flex justify-center">
                 <img
                     src="/assets/images/logo.png"
@@ -877,7 +877,9 @@
         </main>
         <footer class="border-t border-white/10 bg-slate-950/30">
             <div class="mx-auto max-w-6xl px-4 py-10 space-y-6">
-                <div class="rounded-2xl bg-white/10 border border-white/10 p-5">
+                <div
+                    class="rounded-2xl bg-slate-950/35 border border-white/10 p-5"
+                >
                     <form action="footer__contact-form" class="space-y-3">
                         <h2 class="text-lg font-semibold text-white">
                             Nous contacter
@@ -986,7 +988,7 @@
                     </div>
                 </div>
                 <div
-                    class="rounded-2xl bg-white/10 border border-white/10 p-4 flex justify-center"
+                    class="rounded-2xl bg-slate-950/35 border border-white/10 p-4 flex justify-center"
                 >
                     <ul class="flex gap-3">
                         <li>
