--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </ul>
                 </nav>
                 <img
-                    src="/assets/icons/Icon button togglable - standard.svg"
+                    src="assets/icons/Icon button togglable - standard.svg"
                     alt="Burger menu icon"
                     class="h-8 w-8 md:hidden opacity-90"
                 />
@@ -126,7 +126,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -180,7 +180,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -234,7 +234,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hove r:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -288,7 +288,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -357,7 +357,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -412,7 +412,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -467,7 +467,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -522,7 +522,7 @@
                             class="w-64 border border-white/10 rounded-2xl overflow-hidden bg-white shadow-sm transition hover:-translate-y-1 hover:shadow-lg"
                         >
                             <img
-                                src="/assets/images/img-course.png"
+                                src="assets/images/img-course.png"
                                 alt="Formation illustration"
                                 class="h-40 w-full object-cover"
                             />
@@ -588,7 +588,7 @@
                     >
                         <div class="flex items-center gap-3">
                             <img
-                                src="/assets/images/juliette.png"
+                                src="assets/images/juliette.png"
                                 alt="Photo of Juliette"
                                 class="h-l w-l rounded-full object-cover border border-white/10"
                             />
@@ -631,7 +631,7 @@
                     >
                         <div class="flex items-center gap-3">
                             <img
-                                src="/assets/images/camille.png"
+                                src="assets/images/camille.png"
                                 alt="Photo of Camille"
                                 class="h-l w-l rounded-full object-cover border border-white/10"
                             />
@@ -683,7 +683,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/arrow-up-right.svg"
+                                    src="assets/icons/arrow-up-right.svg"
                                     alt="arrow icon"
                                     class="h-5 w-5"
                                 />
@@ -693,7 +693,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/edit-01.svg"
+                                    src="assets/icons/edit-01.svg"
                                     alt="pen icon"
                                     class="h-5 w-5"
                                 />
@@ -706,7 +706,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/download-02.svg"
+                                    src="assets/icons/download-02.svg"
                                     alt="download icon"
                                     class="h-5 w-5"
                                 />
@@ -719,7 +719,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/star-02.svg"
+                                    src="assets/icons/star-02.svg"
                                     alt="star icon"
                                     class="h-5 w-5"
                                 />
@@ -729,7 +729,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/clock-backward.svg"
+                                    src="assets/icons/clock-backward.svg"
                                     alt="clock icon"
                                     class="h-5 w-5"
                                 />
@@ -739,7 +739,7 @@
                                 class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                             >
                                 <img
-                                    src="/assets/icons/annotation-typing.svg"
+                                    src="assets/icons/annotation-typing.svg"
                                     alt="typing icon"
                                     class="h-5 w-5"
                                 />
@@ -751,7 +751,7 @@
                         </ul>
                     </div>
                     <img
-                        src="/assets/images/avantages.png"
+                        src="assets/images/avantages.png"
                         alt="Illustration of someone in an office"
                         class="w-full rounded-2xl object-cover"
                     />
@@ -766,7 +766,7 @@
                             Créez vos formations avec Klivio
                         </h2>
                         <img
-                            src="/assets/images/become-author.png"
+                            src="assets/images/become-author.png"
                             alt="Illustration of a desk"
                             class="w-full rounded-2xl border border-white/10 object-cover"
                         />
@@ -776,7 +776,7 @@
                             class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                         >
                             <img
-                                src="/assets/icons/coin-hand.svg"
+                                src="assets/icons/coin-hand.svg"
                                 alt="Coin hand icon"
                                 class="h-5 w-5"
                             />
@@ -789,7 +789,7 @@
                             class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                         >
                             <img
-                                src="/assets/icons/heart.svg"
+                                src="assets/icons/heart.svg"
                                 alt="Hearth icon"
                                 class="h-5 w-5"
                             />
@@ -799,7 +799,7 @@
                             class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                         >
                             <img
-                                src="/assets/icons/pencil-01.svg"
+                                src="assets/icons/pencil-01.svg"
                                 alt="Pen icon"
                                 class="h-5 w-5"
                             />
@@ -812,7 +812,7 @@
                             class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                         >
                             <img
-                                src="/assets/icons/settings.svg"
+                                src="assets/icons/settings.svg"
                                 alt="Settings icon"
                                 class="h-5 w-5"
                             />
@@ -828,7 +828,7 @@
                             class="flex items-center gap-3 rounded-xl bg-white/5 border border-white/10 p-3"
                         >
                             <img
-                                src="/assets/icons/user-profile-square.svg"
+                                src="assets/icons/user-profile-square.svg"
                                 alt="User profile icon"
                                 class="h-5 w-5"
                             />
@@ -869,7 +869,7 @@
             </div>
             <div class="flex justify-center">
                 <img
-                    src="/assets/images/logo.png"
+                    src="assets/images/logo.png"
                     alt="Klivio Logo"
                     class="h-10 opacity-90"
                 />
@@ -960,7 +960,7 @@
                         <ul class="space-y-3 text-sm text-slate-200">
                             <li class="flex items-start gap-3">
                                 <img
-                                    src="/assets/icons/marker-02.svg"
+                                    src="assets/icons/marker-02.svg"
                                     alt="localisation icon"
                                     class="h-5 w-5 mt-0.5"
                                 />
@@ -970,7 +970,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <img
-                                    src="/assets/icons/phone.svg"
+                                    src="assets/icons/phone.svg"
                                     alt="phone icon"
                                     class="h-5 w-5"
                                 />
@@ -978,7 +978,7 @@
                             </li>
                             <li class="flex items-center gap-3">
                                 <img
-                                    src="/assets/icons/mail-01.svg"
+                                    src="assets/icons/mail-01.svg"
                                     alt="letter icon"
                                     class="h-5 w-5"
                                 />
