--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Klivio - Accueil</title>
-        <link
-            rel="icon"
-            href="/assets/icons/favicon.svg"
-            type="image/svg+xml"
-        />
+        <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml" />
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet"
